--- a/latex/main.tex
+++ b/latex/main.tex
@@ -20,7 +20,7 @@ Santana Martin, Irene
     \large Implementation of Flow-Joins
 }
 \maketitle
-\abstract{...}
+\abstract{This report presents the implementation and evaluation of our design of the flow join algorihtm based on the paper by Roediger W\cite{roediger2016flowjoin}. }
 \section{Introduction}
 ...
 \section{Implementation} 
